--- a/client/src/components/AlgorithmDashboard/styles.module.scss
+++ b/client/src/components/AlgorithmDashboard/styles.module.scss
@@ -1,3 +1,5 @@
 :local(.algorithmData):global(.MuiExpansionPanelDetails-root) {
-  display: initial;
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  gap: 0.5rem;
 }
