--- a/client/src/components/AlgorithmDashboard/styles.module.scss
+++ b/client/src/components/AlgorithmDashboard/styles.module.scss
@@ -3,3 +3,14 @@
   grid-template-columns: 1fr 3fr;
   gap: 0.5rem;
 }
+
+:local(.progressOverlay) {
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(255, 255, 255, 0.7);
+  z-index: 1;
+}
