--- a/client/src/components/DataFormExpansionPanel/styles.module.scss
+++ b/client/src/components/DataFormExpansionPanel/styles.module.scss
@@ -7,9 +7,9 @@
 :local(.progressOverlay) {
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
-  position: fixed;
+  width: 100%;
+  height: 100%;
+  position: absolute;
   display: flex;
   justify-content: center;
   align-items: center;
