--- a/client/src/components/DataFormExpansionPanel/styles.module.scss
+++ b/client/src/components/DataFormExpansionPanel/styles.module.scss
@@ -16,3 +16,12 @@
   background-color: rgba(255, 255, 255, 0.7);
   z-index: 1;
 }
+
+:local(.title) {
+  flex-basis: 26%;
+  flex-shrink: 0;
+}
+
+:local(.description) {
+  opacity: 0.7;
+}
